2001-12-10  Fred Fish  <fnf@redhat.com>

	* arm-linux-tdep.c (skip_hurd_resolver): Use NULL rather than
	zero in args to lookup_minimal_symbol.
	* linespec.c (decode_line_1): Ditto.
	* i386-linux-tdep.c (skip_hurd_resolver): Ditto.
	* minsyms.c (find_stab_function_addr): Ditto.
	* symfile.c (simple_read_overlay_table): Ditto.
	(simple_read_overlay_region_table): Ditto.

2001-12-09  Fred Fish  <fnf@redhat.com>

	* gdbtypes.c (TYPE_FLAG_UNSIGNED, TYPE_FLAG_STUB): Use
	TYPE_UNSIGNED and TYPE_NOSIGN to determine when to print these
	rather than testing the bits directly.
	(TYPE_FLAG_NOSIGN, TYPE_FLAG_TARGET_STUB, TYPE_FLAG_STATIC,
	TYPE_FLAG_CONST, TYPE_FLAG_VOLATILE, TYPE_FLAG_PROTOTYPED,
	TYPE_FLAG_INCOMPLETE, TYPE_FLAG_CODE_SPACE, TYPE_FLAG_DATA_SPACE,
	TYPE_FLAG_VARARGS): Test for and print these bits as well.

2001-12-09  Fred Fish  <fnf@redhat.com>

	* gdbtypes.c (build_gdbtypes): For builtin_type_char, pass
	TYPE_FLAG_NOSIGN to init_type() rather than setting it after the
	type is created.

2001-12-09  Fred Fish  <fnf@redhat.com>

	* gdbtypes.h (TYPE_UNSIGNED, TYPE_NOSIGN, TYPE_CONST,
	TYPE_VOLATILE, TYPE_INCOMPLETE): Move macros that test the
	bits to location in file where the bits are defined.
	(TYPE_STUB, TYPE_TARGET_STUB, TYPE_STATIC, TYPE_PROTOTYPED,
	TYPE_CODE_SPACE, TYPE_DATA_SPACE): New test macros.

2001-12-09  Fred Fish  <fnf@redhat.com>

	* gdbtypes.c (allocate_stub_method): Replace hand crafted type
	initialization with call to the init_type() function.

2001-12-09  Andrew Cagney  <ac131313@redhat.com>

	* arch-utils.c (generic_register_raw_size): New function.
	* gdbarch.sh (REGISTER_RAW_SIZE): Use generic_register_raw_size as
	the static default.
	* gdbarch.c: Regenerate.	
	* arch-utils.h (generic_register_raw_size): Declare.

	* config/mips/tm-mips.h (REGISTER_RAW_SIZE): Delete macro.
	* mips-tdep.c (mips_register_raw_size): Make function static.
	(mips_gdbarch_init): Initialize register_raw_size.

2001-12-08  Fred Fish  <fnf@redhat.com>
